# hotel-cancellations-and-mega-wildfires

./: README.md  poisson_did_tutorial.ipynb  pyproject.toml
src/: data_loader.py
utils/: plotting.py
